导出word包含jpg图片不兼容，PC可以打开，手机和上传附件附件无法预览